# Jakes-Draft-Tool

./: .gitignore  CLAUDE.md  README.md
.claude/: launch.json
app/: package-lock.json  package.json  tailwind.config.ts
app/app/: globals.css  layout.tsx  page.tsx
app/components/: DraftRoom.tsx  Header.tsx  MockDraft.tsx  PlayerDetail.tsx  PlayerRow.tsx  SoftSignals.tsx  ui.tsx
app/data/: rankings.json
app/lib/: format.ts  mockdraft.ts  softsignals.ts  types.ts
pipeline/: Makefile  pyproject.toml
pipeline/data/: player_overrides.sample.json  soft_scores.sample.json  team_situations.sample.json
pipeline/src/ffrank/: __init__.py  adp.py  config.py  espn_adp.py  experiments.py  ingest.py  probe.py  project.py  rank.py  ranking.py  schema.py  scoring.py  softsignals.py  validate.py  vegas.py
pipeline/tests/: test_adp.py  test_espn_adp.py  test_project.py  test_ranking.py  test_replacement.py  test_rookies.py  test_schema.py  test_scoring.py  test_softsignals.py  test_vegas.py
schema/: contract.schema.json  sample.json
